[package]
name = "punchcards"
version = "0.1.0"
authors = ["Stephen Sherratt <sfsherratt@gmail.com>"]

[dependencies]
serde = "1.0"
serde_derive = "1.0"
entity_store_helper = { path = "/home/steve/src/entity-store/helper" }

[build-dependencies]
entity_store_code_gen = { path = "/home/steve/src/entity-store/code-gen" }
